--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@
   }
 
   .heading {
-    @apply text-center text-white text-[28px] sm:text-[33px] md:text-[45px] font-bold uppercase;
+    @apply text-center text-white text-[28px] sm:text-[33px] md:text-[45px] font-bold uppercase px-3;
   }
 
   .project-card {
